Quick fix for the point 2 of issue #120, about text that cannot be read overlapped by a dropdown list. Original design is not so respected now, and is not so fine the result, but text can be read.

--- a/Styles/Dashboard.css
+++ b/Styles/Dashboard.css
@@ -576,10 +576,10 @@ form.positionavailability input{
 .positionavailability-booking label{
     display: block;
     margin-bottom: 16px !important;
+    padding: 0;
 }
 .positionavailability-booking select{
-    position: absolute;
-    right: 0;
+    float: right;
     text-align: right;
 }
 
